hphp/test/zend/good/ext/standard/tests/http/bug43510.php.skipif
<?php require 'server.inc'; http_server_skipif('tcp://127.0.0.1:12342'); ?>