hphp/test/zend/bad/ext/pdo_mysql/tests/pdo_mysql_prepare_emulated_placeholder_everywhere.php.skipif
<?php
require_once(dirname(__FILE__) . DIRECTORY_SEPARATOR . 'skipif.inc');
require_once(dirname(__FILE__) . DIRECTORY_SEPARATOR . 'mysql_pdo_test.inc');
MySQLPDOTest::skip();
// TODO: This test is MySQL version specific - for whatever reason
?>